# PANDA-Linear-Regression

./: ComoUsar.md  IMPORTANTE.md  README.md
.ipynb_checkpoints/: SimplesLR-checkpoint.ipynb
Apresentacoes/: README.md
Aula_Intro/: Aula_Intro.ipynb  README.md
Multiple_LR_Notebooks/: README.md
Multiple_LR_Notebooks/House_Prices/: Inference.ipynb  Prediction.ipynb  Test-EDA.ipynb  Train-EDA.ipynb  inference.csv  numeric-test.csv  numeric-train.csv
Simple_LR_Notebooks/: README.md
Simple_LR_Notebooks/Cons_vs_Income/: IncomeConsumption.csv
Simple_LR_Notebooks/X_vs_Y/: SimplesLR.ipynb
Simples/: SLR.ipynb
Teoria/: README.md
Teoria/Reg_Multipla/: README.md
Teoria/Reg_Simples/: README.md
Teoria/Topicos_Adicionais/: README.md
azevedo/linear/: linear.ipynb  linear.md  pyproject.toml
